Running findbugs, plus a few formatting and style corrections.