@@ -85,7 +85,7 @@ public abstract class XmlTemplate {
      * @param value value to be set in the XML template
      */
     public void setVariable(String name, int value) {
-        valueMap.put(name, new Integer(value));
+        valueMap.put(name, Integer.valueOf(value));
     }
 
     /**
@@ -97,7 +97,7 @@ public abstract class XmlTemplate {
      * @param value value to be set in the XML template
      */
     public void setVariable(String name, long value) {
-        valueMap.put(name, new Long(value));
+        valueMap.put(name, Long.valueOf(value));
     }
 
     /**
